etapa2/y.output
   0  $accept : program $end

   1  program : declist

   2  declist : dec declist
   3          |

   4  dec : funcdec
   5      | vardec

   6  vardec : TK_IDENTIFIER ':' vartypeandvalue ';'

   7  vartypeandvalue : KW_BYTE LIT_CHAR
   8                  | KW_BYTE LIT_INTEGER
   9                  | KW_SHORT LIT_INTEGER
  10                  | KW_LONG LIT_INTEGER
  11                  | KW_FLOAT LIT_REAL
  12                  | KW_DOUBLE LIT_INTEGER
  13                  | KW_BYTE '[' LIT_INTEGER ']' intlist
  14                  | KW_BYTE '[' LIT_INTEGER ']' charlist
  15                  | KW_SHORT '[' LIT_INTEGER ']' intlist
  16                  | KW_LONG '[' LIT_INTEGER ']' intlist
  17                  | KW_FLOAT '[' LIT_INTEGER ']' floatlist
  18                  | KW_DOUBLE '[' LIT_INTEGER ']' intlist

  19  intlist : LIT_INTEGER intlist
  20          |

  21  charlist : LIT_CHAR charlist
  22           |

  23  floatlist : LIT_REAL floatlist
  24            |

  25  funcdec : vartype TK_IDENTIFIER '(' parameters ')' funcbody

  26  parameters : paramlist
  27             |

  28  paramlist : param ',' paramlist
  29            | param

  30  param : vartype TK_IDENTIFIER

  31  vartype : KW_BYTE
  32          | KW_SHORT
  33          | KW_LONG
  34          | KW_FLOAT
  35          | KW_DOUBLE

  36  funcbody : cmd

  37  cmdlist : cmd
  38          | cmdlist cmd

  39  cmd : atrib ';'
  40      |
  41      | '{' cmdlist '}' ';'
  42      | ';'
  43      | control
  44      | KW_READ TK_IDENTIFIER ';'
  45      | KW_PRINT printlist ';'
  46      | KW_RETURN expr ';'

  47  printlist : printelement printlist
  48            | printelement

  49  printelement : LIT_STRING
  50               | expr

  51  control : KW_WHEN '(' expr ')' KW_THEN cmd
  52          | KW_WHEN '(' expr ')' KW_THEN cmd KW_ELSE cmd
  53          | KW_WHILE '(' expr ')' cmd
  54          | KW_FOR '(' TK_IDENTIFIER '=' expr KW_TO expr ')' cmd

  55  atrib : TK_IDENTIFIER '=' expr
  56        | TK_IDENTIFIER '#' expr '=' expr

  57  expr : '(' expr ')'
  58       | TK_IDENTIFIER
  59       | TK_IDENTIFIER '[' expr ']'
  60       | TK_IDENTIFIER '(' args ')'
  61       | LIT_INTEGER
  62       | LIT_CHAR
  63       | LIT_REAL
  64       | expr operator expr

  65  args : expr argstail
  66       |

  67  argstail : ',' expr argstail
  68           |

  69  operator : OPERATOR_LE
  70           | OPERATOR_GE
  71           | OPERATOR_EQ
  72           | OPERATOR_NE
  73           | OPERATOR_AND
  74           | OPERATOR_OR
  75           | '*'
  76           | '+'
  77           | '-'
  78           | '/'
  79           | '<'
  80           | '>'
  81           | '!'

state 0
	$accept : . program $end  (0)
	declist : .  (3)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	TK_IDENTIFIER  shift 6
	$end  reduce 3

	program  goto 7
	declist  goto 8
	dec  goto 9
	funcdec  goto 10
	vardec  goto 11
	vartype  goto 12


state 1
	vartype : KW_BYTE .  (31)

	.  reduce 31


state 2
	vartype : KW_SHORT .  (32)

	.  reduce 32


state 3
	vartype : KW_LONG .  (33)

	.  reduce 33


state 4
	vartype : KW_FLOAT .  (34)

	.  reduce 34


state 5
	vartype : KW_DOUBLE .  (35)

	.  reduce 35


state 6
	vardec : TK_IDENTIFIER . ':' vartypeandvalue ';'  (6)

	':'  shift 13
	.  error


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : declist .  (1)

	.  reduce 1


state 9
	declist : dec . declist  (2)
	declist : .  (3)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	TK_IDENTIFIER  shift 6
	$end  reduce 3

	declist  goto 14
	dec  goto 9
	funcdec  goto 10
	vardec  goto 11
	vartype  goto 12


state 10
	dec : funcdec .  (4)

	.  reduce 4


state 11
	dec : vardec .  (5)

	.  reduce 5


state 12
	funcdec : vartype . TK_IDENTIFIER '(' parameters ')' funcbody  (25)

	TK_IDENTIFIER  shift 15
	.  error


state 13
	vardec : TK_IDENTIFIER ':' . vartypeandvalue ';'  (6)

	KW_BYTE  shift 16
	KW_SHORT  shift 17
	KW_LONG  shift 18
	KW_FLOAT  shift 19
	KW_DOUBLE  shift 20
	.  error

	vartypeandvalue  goto 21


state 14
	declist : dec declist .  (2)

	.  reduce 2


state 15
	funcdec : vartype TK_IDENTIFIER . '(' parameters ')' funcbody  (25)

	'('  shift 22
	.  error


state 16
	vartypeandvalue : KW_BYTE . LIT_CHAR  (7)
	vartypeandvalue : KW_BYTE . LIT_INTEGER  (8)
	vartypeandvalue : KW_BYTE . '[' LIT_INTEGER ']' intlist  (13)
	vartypeandvalue : KW_BYTE . '[' LIT_INTEGER ']' charlist  (14)

	LIT_INTEGER  shift 23
	LIT_CHAR  shift 24
	'['  shift 25
	.  error


state 17
	vartypeandvalue : KW_SHORT . LIT_INTEGER  (9)
	vartypeandvalue : KW_SHORT . '[' LIT_INTEGER ']' intlist  (15)

	LIT_INTEGER  shift 26
	'['  shift 27
	.  error


state 18
	vartypeandvalue : KW_LONG . LIT_INTEGER  (10)
	vartypeandvalue : KW_LONG . '[' LIT_INTEGER ']' intlist  (16)

	LIT_INTEGER  shift 28
	'['  shift 29
	.  error


state 19
	vartypeandvalue : KW_FLOAT . LIT_REAL  (11)
	vartypeandvalue : KW_FLOAT . '[' LIT_INTEGER ']' floatlist  (17)

	LIT_REAL  shift 30
	'['  shift 31
	.  error


state 20
	vartypeandvalue : KW_DOUBLE . LIT_INTEGER  (12)
	vartypeandvalue : KW_DOUBLE . '[' LIT_INTEGER ']' intlist  (18)

	LIT_INTEGER  shift 32
	'['  shift 33
	.  error


state 21
	vardec : TK_IDENTIFIER ':' vartypeandvalue . ';'  (6)

	';'  shift 34
	.  error


state 22
	funcdec : vartype TK_IDENTIFIER '(' . parameters ')' funcbody  (25)
	parameters : .  (27)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	')'  reduce 27

	vartype  goto 35
	parameters  goto 36
	paramlist  goto 37
	param  goto 38


state 23
	vartypeandvalue : KW_BYTE LIT_INTEGER .  (8)

	.  reduce 8


state 24
	vartypeandvalue : KW_BYTE LIT_CHAR .  (7)

	.  reduce 7


state 25
	vartypeandvalue : KW_BYTE '[' . LIT_INTEGER ']' intlist  (13)
	vartypeandvalue : KW_BYTE '[' . LIT_INTEGER ']' charlist  (14)

	LIT_INTEGER  shift 39
	.  error


state 26
	vartypeandvalue : KW_SHORT LIT_INTEGER .  (9)

	.  reduce 9


state 27
	vartypeandvalue : KW_SHORT '[' . LIT_INTEGER ']' intlist  (15)

	LIT_INTEGER  shift 40
	.  error


state 28
	vartypeandvalue : KW_LONG LIT_INTEGER .  (10)

	.  reduce 10


state 29
	vartypeandvalue : KW_LONG '[' . LIT_INTEGER ']' intlist  (16)

	LIT_INTEGER  shift 41
	.  error


state 30
	vartypeandvalue : KW_FLOAT LIT_REAL .  (11)

	.  reduce 11


state 31
	vartypeandvalue : KW_FLOAT '[' . LIT_INTEGER ']' floatlist  (17)

	LIT_INTEGER  shift 42
	.  error


state 32
	vartypeandvalue : KW_DOUBLE LIT_INTEGER .  (12)

	.  reduce 12


state 33
	vartypeandvalue : KW_DOUBLE '[' . LIT_INTEGER ']' intlist  (18)

	LIT_INTEGER  shift 43
	.  error


state 34
	vardec : TK_IDENTIFIER ':' vartypeandvalue ';' .  (6)

	.  reduce 6


state 35
	param : vartype . TK_IDENTIFIER  (30)

	TK_IDENTIFIER  shift 44
	.  error


state 36
	funcdec : vartype TK_IDENTIFIER '(' parameters . ')' funcbody  (25)

	')'  shift 45
	.  error


state 37
	parameters : paramlist .  (26)

	.  reduce 26


state 38
	paramlist : param . ',' paramlist  (28)
	paramlist : param .  (29)

	','  shift 46
	')'  reduce 29


state 39
	vartypeandvalue : KW_BYTE '[' LIT_INTEGER . ']' intlist  (13)
	vartypeandvalue : KW_BYTE '[' LIT_INTEGER . ']' charlist  (14)

	']'  shift 47
	.  error


state 40
	vartypeandvalue : KW_SHORT '[' LIT_INTEGER . ']' intlist  (15)

	']'  shift 48
	.  error


state 41
	vartypeandvalue : KW_LONG '[' LIT_INTEGER . ']' intlist  (16)

	']'  shift 49
	.  error


state 42
	vartypeandvalue : KW_FLOAT '[' LIT_INTEGER . ']' floatlist  (17)

	']'  shift 50
	.  error


state 43
	vartypeandvalue : KW_DOUBLE '[' LIT_INTEGER . ']' intlist  (18)

	']'  shift 51
	.  error


state 44
	param : vartype TK_IDENTIFIER .  (30)

	.  reduce 30


45: shift/reduce conflict (shift 58, reduce 40) on TK_IDENTIFIER
state 45
	funcdec : vartype TK_IDENTIFIER '(' parameters ')' . funcbody  (25)
	cmd : .  (40)

	KW_WHEN  shift 52
	KW_WHILE  shift 53
	KW_FOR  shift 54
	KW_READ  shift 55
	KW_RETURN  shift 56
	KW_PRINT  shift 57
	TK_IDENTIFIER  shift 58
	';'  shift 59
	'{'  shift 60
	$end  reduce 40
	KW_BYTE  reduce 40
	KW_SHORT  reduce 40
	KW_LONG  reduce 40
	KW_FLOAT  reduce 40
	KW_DOUBLE  reduce 40

	funcbody  goto 61
	cmd  goto 62
	atrib  goto 63
	control  goto 64


state 46
	paramlist : param ',' . paramlist  (28)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	.  error

	vartype  goto 35
	paramlist  goto 65
	param  goto 38


47: reduce/reduce conflict (reduce 20, reduce 22) on ';'
state 47
	vartypeandvalue : KW_BYTE '[' LIT_INTEGER ']' . intlist  (13)
	vartypeandvalue : KW_BYTE '[' LIT_INTEGER ']' . charlist  (14)
	intlist : .  (20)
	charlist : .  (22)

	LIT_INTEGER  shift 66
	LIT_CHAR  shift 67
	';'  reduce 20

	intlist  goto 68
	charlist  goto 69


state 48
	vartypeandvalue : KW_SHORT '[' LIT_INTEGER ']' . intlist  (15)
	intlist : .  (20)

	LIT_INTEGER  shift 66
	';'  reduce 20

	intlist  goto 70


state 49
	vartypeandvalue : KW_LONG '[' LIT_INTEGER ']' . intlist  (16)
	intlist : .  (20)

	LIT_INTEGER  shift 66
	';'  reduce 20

	intlist  goto 71


state 50
	vartypeandvalue : KW_FLOAT '[' LIT_INTEGER ']' . floatlist  (17)
	floatlist : .  (24)

	LIT_REAL  shift 72
	';'  reduce 24

	floatlist  goto 73


state 51
	vartypeandvalue : KW_DOUBLE '[' LIT_INTEGER ']' . intlist  (18)
	intlist : .  (20)

	LIT_INTEGER  shift 66
	';'  reduce 20

	intlist  goto 74


state 52
	control : KW_WHEN . '(' expr ')' KW_THEN cmd  (51)
	control : KW_WHEN . '(' expr ')' KW_THEN cmd KW_ELSE cmd  (52)

	'('  shift 75
	.  error


state 53
	control : KW_WHILE . '(' expr ')' cmd  (53)

	'('  shift 76
	.  error


state 54
	control : KW_FOR . '(' TK_IDENTIFIER '=' expr KW_TO expr ')' cmd  (54)

	'('  shift 77
	.  error


state 55
	cmd : KW_READ . TK_IDENTIFIER ';'  (44)

	TK_IDENTIFIER  shift 78
	.  error


state 56
	cmd : KW_RETURN . expr ';'  (46)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	'('  shift 83
	.  error

	expr  goto 84


state 57
	cmd : KW_PRINT . printlist ';'  (45)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	LIT_STRING  shift 85
	'('  shift 83
	.  error

	printlist  goto 86
	expr  goto 87
	printelement  goto 88


state 58
	atrib : TK_IDENTIFIER . '=' expr  (55)
	atrib : TK_IDENTIFIER . '#' expr '=' expr  (56)

	'='  shift 89
	'#'  shift 90
	.  error


state 59
	cmd : ';' .  (42)

	.  reduce 42


60: shift/reduce conflict (shift 52, reduce 40) on KW_WHEN
60: shift/reduce conflict (shift 53, reduce 40) on KW_WHILE
60: shift/reduce conflict (shift 54, reduce 40) on KW_FOR
60: shift/reduce conflict (shift 55, reduce 40) on KW_READ
60: shift/reduce conflict (shift 56, reduce 40) on KW_RETURN
60: shift/reduce conflict (shift 57, reduce 40) on KW_PRINT
60: shift/reduce conflict (shift 58, reduce 40) on TK_IDENTIFIER
60: shift/reduce conflict (shift 59, reduce 40) on ';'
60: shift/reduce conflict (shift 60, reduce 40) on '{'
state 60
	cmd : '{' . cmdlist '}' ';'  (41)
	cmd : .  (40)

	KW_WHEN  shift 52
	KW_WHILE  shift 53
	KW_FOR  shift 54
	KW_READ  shift 55
	KW_RETURN  shift 56
	KW_PRINT  shift 57
	TK_IDENTIFIER  shift 58
	';'  shift 59
	'{'  shift 60
	'}'  reduce 40

	cmd  goto 91
	cmdlist  goto 92
	atrib  goto 63
	control  goto 64


state 61
	funcdec : vartype TK_IDENTIFIER '(' parameters ')' funcbody .  (25)

	.  reduce 25


state 62
	funcbody : cmd .  (36)

	.  reduce 36


state 63
	cmd : atrib . ';'  (39)

	';'  shift 93
	.  error


state 64
	cmd : control .  (43)

	.  reduce 43


state 65
	paramlist : param ',' paramlist .  (28)

	.  reduce 28


state 66
	intlist : LIT_INTEGER . intlist  (19)
	intlist : .  (20)

	LIT_INTEGER  shift 66
	';'  reduce 20

	intlist  goto 94


state 67
	charlist : LIT_CHAR . charlist  (21)
	charlist : .  (22)

	LIT_CHAR  shift 67
	';'  reduce 22

	charlist  goto 95


state 68
	vartypeandvalue : KW_BYTE '[' LIT_INTEGER ']' intlist .  (13)

	.  reduce 13


state 69
	vartypeandvalue : KW_BYTE '[' LIT_INTEGER ']' charlist .  (14)

	.  reduce 14


state 70
	vartypeandvalue : KW_SHORT '[' LIT_INTEGER ']' intlist .  (15)

	.  reduce 15


state 71
	vartypeandvalue : KW_LONG '[' LIT_INTEGER ']' intlist .  (16)

	.  reduce 16


state 72
	floatlist : LIT_REAL . floatlist  (23)
	floatlist : .  (24)

	LIT_REAL  shift 72
	';'  reduce 24

	floatlist  goto 96


state 73
	vartypeandvalue : KW_FLOAT '[' LIT_INTEGER ']' floatlist .  (17)

	.  reduce 17


state 74
	vartypeandvalue : KW_DOUBLE '[' LIT_INTEGER ']' intlist .  (18)

	.  reduce 18


state 75
	control : KW_WHEN '(' . expr ')' KW_THEN cmd  (51)
	control : KW_WHEN '(' . expr ')' KW_THEN cmd KW_ELSE cmd  (52)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	'('  shift 83
	.  error

	expr  goto 97


state 76
	control : KW_WHILE '(' . expr ')' cmd  (53)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	'('  shift 83
	.  error

	expr  goto 98


state 77
	control : KW_FOR '(' . TK_IDENTIFIER '=' expr KW_TO expr ')' cmd  (54)

	TK_IDENTIFIER  shift 99
	.  error


state 78
	cmd : KW_READ TK_IDENTIFIER . ';'  (44)

	';'  shift 100
	.  error


79: shift/reduce conflict (shift 102, reduce 58) on '('
state 79
	expr : TK_IDENTIFIER .  (58)
	expr : TK_IDENTIFIER . '[' expr ']'  (59)
	expr : TK_IDENTIFIER . '(' args ')'  (60)

	'['  shift 101
	'('  shift 102
	KW_TO  reduce 58
	OPERATOR_LE  reduce 58
	OPERATOR_GE  reduce 58
	OPERATOR_EQ  reduce 58
	OPERATOR_NE  reduce 58
	OPERATOR_AND  reduce 58
	OPERATOR_OR  reduce 58
	TK_IDENTIFIER  reduce 58
	LIT_INTEGER  reduce 58
	LIT_REAL  reduce 58
	LIT_CHAR  reduce 58
	LIT_STRING  reduce 58
	';'  reduce 58
	']'  reduce 58
	')'  reduce 58
	','  reduce 58
	'='  reduce 58
	'*'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'/'  reduce 58
	'<'  reduce 58
	'>'  reduce 58
	'!'  reduce 58


state 80
	expr : LIT_INTEGER .  (61)

	.  reduce 61


state 81
	expr : LIT_REAL .  (63)

	.  reduce 63


state 82
	expr : LIT_CHAR .  (62)

	.  reduce 62


state 83
	expr : '(' . expr ')'  (57)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	'('  shift 83
	.  error

	expr  goto 103


state 84
	cmd : KW_RETURN expr . ';'  (46)
	expr : expr . operator expr  (64)

	OPERATOR_LE  shift 104
	OPERATOR_GE  shift 105
	OPERATOR_EQ  shift 106
	OPERATOR_NE  shift 107
	OPERATOR_AND  shift 108
	OPERATOR_OR  shift 109
	';'  shift 110
	'*'  shift 111
	'+'  shift 112
	'-'  shift 113
	'/'  shift 114
	'<'  shift 115
	'>'  shift 116
	'!'  shift 117
	.  error

	operator  goto 118


state 85
	printelement : LIT_STRING .  (49)

	.  reduce 49


state 86
	cmd : KW_PRINT printlist . ';'  (45)

	';'  shift 119
	.  error


state 87
	printelement : expr .  (50)
	expr : expr . operator expr  (64)

	OPERATOR_LE  shift 104
	OPERATOR_GE  shift 105
	OPERATOR_EQ  shift 106
	OPERATOR_NE  shift 107
	OPERATOR_AND  shift 108
	OPERATOR_OR  shift 109
	'*'  shift 111
	'+'  shift 112
	'-'  shift 113
	'/'  shift 114
	'<'  shift 115
	'>'  shift 116
	'!'  shift 117
	TK_IDENTIFIER  reduce 50
	LIT_INTEGER  reduce 50
	LIT_REAL  reduce 50
	LIT_CHAR  reduce 50
	LIT_STRING  reduce 50
	';'  reduce 50
	'('  reduce 50

	operator  goto 118


state 88
	printlist : printelement . printlist  (47)
	printlist : printelement .  (48)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	LIT_STRING  shift 85
	'('  shift 83
	';'  reduce 48

	printlist  goto 120
	expr  goto 87
	printelement  goto 88


state 89
	atrib : TK_IDENTIFIER '=' . expr  (55)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	'('  shift 83
	.  error

	expr  goto 121


state 90
	atrib : TK_IDENTIFIER '#' . expr '=' expr  (56)

	TK_IDENTIFIER  shift 79
	LIT_INTEGER  shift 80
	LIT_REAL  shift 81
	LIT_CHAR  shift 82
	'('  shift 83
	.  error

	expr  goto 122


state 91
	cmdlist : cmd .  (37)

	.  reduce 37

